[package]
name = "hoorayhug"
version = "2.0.9"
authors = ["MartinKuo.XY <martinkuo001@gmail.com>"]
edition = "2021"


[workspace]
members = [
    "hoorayhug_io",
    "hoorayhug_lb",
    "hoorayhug_core",
    "hoorayhug_hook",
    "hoorayhug_syscall"
]


[lib]
name = "hoorayhug"
path = "src/lib.rs"

[[bin]]
name = "hoorayhug"
path = "src/bin.rs"


[dependencies]
# hoorayhug
hoorayhug_core = { path = "hoorayhug_core" }

# common
cfg-if = "1"
futures = "0.3"
walkdir = "2"

# runtime
tokio = { version = "1", features = ["rt"] }

# logger
log = "0.4"
fern = "0.7"
chrono = "0.4"

# command
clap = { version = "4", features = ["string"] }
toml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# malloc
mimalloc = { version = "0.1", optional = true, default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }
mmap-allocator = { version = "0.3", optional = true }


[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros"] }


[features]
default = ["proxy", "balance", "multi-thread", "transport", "transport-tls-awslc", "batched-udp", "brutal-shutdown"]
default-ring = ["proxy", "balance", "multi-thread", "transport", "transport-tls-ring", "batched-udp", "brutal-shutdown"]
hook = ["hoorayhug_core/hook"]
proxy = ["hoorayhug_core/proxy"]
brutal-shutdown = ["hoorayhug_core/brutal-shutdown"]
balance = ["hoorayhug_core/balance"]
transport = ["hoorayhug_core/transport", "hoorayhug_core/transport-boost"]
transport-tls-ring = ["hoorayhug_core/transport-tls-ring"]
transport-tls-awslc = ["hoorayhug_core/transport-tls-awslc"]
batched-udp = ["hoorayhug_core/batched-udp"]
multi-thread = ["tokio/rt-multi-thread", "hoorayhug_core/multi-thread"]
jemalloc = ["jemallocator"]
mi-malloc = ["mimalloc"]
page-alloc = ["mmap-allocator"]


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
panic = "unwind"
strip = true

[profile.release-thin]
inherits = "release"
opt-level = "s"
