[package]
name = "hoorayhug_core"
version = "0.5.1"
authors = ["HoorayHug Contributors"]
description = "HoorayHug's core facilities."
repository = "https://github.com/MartinKuo-XY/hoorayhug-rs"
readme = "README.md"
documentation = "https://docs.rs/hoorayhug_core"
keywords = ["network", "relay", "zero-copy", "websocket", "tls"]
edition = "2021"
license = "MIT"

[dependencies]
# hoorayhug
hoorayhug_io = { path = "../hoorayhug_io" }
hoorayhug_syscall = { path = "../hoorayhug_syscall" }
hoorayhug_hook = { path = "../hoorayhug_hook", optional = true }
hoorayhug_lb = { path = "../hoorayhug_lb", optional = true }
kaminari = { version = "0.14", features = ["ws", "tls", "mix"], optional = true }

# other
futures = "0.3"
log = "0.4"
bytes = { version = "1", optional = true }
once_cell = "1"
pin-project = "1"
hickory-resolver = "0.25"
tokio = { version = "1.9", features = ["rt", "net", "time"] }
proxy-protocol = { version = "0.5", optional = true }

[features]
default = []
hook = ["hoorayhug_hook"]
balance = ["hoorayhug_lb"]
brutal-shutdown = ["hoorayhug_io/brutal-shutdown"]
transport = ["kaminari"]
transport-boost = []
transport-tls-ring = ["kaminari/tls-ring"]
transport-tls-awslc = ["kaminari/tls-awslc"]
proxy = ["proxy-protocol", "bytes", "tokio/io-util"]
batched-udp = []
multi-thread = []

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["macros"] }
