[package]
name = "hoorayhug_hook"
version = "0.1.4"
authors = ["zephyr <i@zephyr.moe>"]
description = "HoorayHug's flexible hooks."
repository = "https://github.com/MartinKuo-XY/hoorayhug-rs"
readme = "README.md"
documentation = "https://docs.rs/hoorayhug_hook"
keywords = ["ffi", "hook"]
edition = "2021"
license = "MIT"


[dependencies]
once_cell = "1"
libloading = "0.8"
